cmake_minimum_required(VERSION 3.16)

project(SNU_BMT_GUI_Submitter_App VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PROJECT_SOURCES
        main.cpp)

# Create the executable
add_executable(SNU_BMT_GUI_Submitter ${PROJECT_SOURCES})

# Add the directory where the libraries are located
target_include_directories(SNU_BMT_GUI_Submitter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

# Link the libraries to the executable
target_link_libraries(SNU_BMT_GUI_Submitter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/lib/libSNU_AI_BMT_GUI_Library.dll.a)